--- a/WidocoDocumentation/sections/references-en.html
+++ b/WidocoDocumentation/sections/references-en.html
@@ -3,6 +3,7 @@
 <ul>
 	<li>Chari, S., Gruen, D.M., Seneviratne, O., McGuinness, D.L.: Directions for Explainable
 Knowledge-Enabled Systems. In: Ilaria Tiddi, Freddy Lecue, Pascal Hitzler (eds.), Knowledge Graphs for eXplainable AI – Foundations, Applications and Challenges. Studies on the Semantic Web. p. 245 - 261. IOS Press (2020)</li>
+<li>Arya, V., Bellamy, R. K., Chen, P. Y., Dhurandhar, A., Hind, M., Hoffman, S. C., ... & Zhang, Y. (2019). One explanation does not fit all: A toolkit and taxonomy of ai explainability techniques. arXiv preprint arXiv:1909.03012.</li>
 <li>Mittelstadt, B., Russell, C.,Wachter, S.: Explaining explanations in AI. In: Proc. of
 the Conf. on fairness, accountability, and transparency. pp. 279–288. ACM (2019)</li>
 <li>Holzinger, A., Biemann, C., Pattichis, C.S., Kell, D.B.: What do we need to build
