--- a/WidocoDocumentation/sections/overview-en.html
+++ b/WidocoDocumentation/sections/overview-en.html
@@ -2,7 +2,7 @@
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
-<ul class="hlist">
+<ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
       <a href="#AbductiveTask" title="https://purl.org/heals/eo#AbductiveTask">Abductive Task</a>
    </li>
@@ -14,16 +14,25 @@ This ontology has the following classes and properties.</span>
       <a href="#AITask" title="https://purl.org/heals/eo#AITask">AI Task</a>
    </li>
    <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C19308" title="http://purl.obolibrary.org/obo/NCIT_C19308">Average Household Income</a>
+   </li>
+   <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0028401" title="http://purl.obolibrary.org/obo/OMIT_0028401">Biological Ontologies</a>
    </li>
    <li>
       <a href="#CaseBasedExplanation" title="https://purl.org/heals/eo#CaseBasedExplanation">Case Based Explanation</a>
    </li>
    <li>
+      <a href="#http://purl.org/heals/eo#Characteristic" title="http://purl.org/heals/eo#Characteristic">Characteristic</a>
+   </li>
+   <li>
       <a href="#ClinicalPearl" title="https://purl.org/heals/eo#ClinicalPearl">Clinical Pearls</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0001177" title="http://purl.obolibrary.org/obo/OMIT_0001177">Computer Heuristics</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C20181" title="http://purl.obolibrary.org/obo/NCIT_C20181">Conceptual Entity</a>
    </li>
    <li>
       <a href="#ContextualExplanation" title="https://purl.org/heals/eo#ContextualExplanation">Contextual Explanation</a>
@@ -36,8 +45,14 @@ This ontology has the following classes and properties.</span>
          title="https://purl.org/heals/eo#ContrastiveExplanation">Contrastive Explanation</a>
    </li>
    <li>
+      <a href="#corporate_role" title="https://purl.org/heals/eo#corporate_role">corporate employee role</a>
+   </li>
+   <li>
       <a href="#CounterfactualExplanation"
          title="https://purl.org/heals/eo#CounterfactualExplanation">Counterfactual Explanation</a>
+   </li>
+   <li>
+      <a href="#DataExplanation" title="https://purl.org/heals/eo#DataExplanation">Data Explanation</a>
    </li>
    <li>
       <a href="#DecisionTree" title="https://purl.org/heals/eo#DecisionTree">Decision Tree</a>
@@ -56,19 +71,44 @@ This ontology has the following classes and properties.</span>
          title="https://purl.org/heals/eo#Evidence_Based_Explanation">Evidence Based Explanation</a>
    </li>
    <li>
+      <a href="#ExemplarMethods" title="https://purl.org/heals/eo#ExemplarMethods">Exemplar Method</a>
+   </li>
+   <li>
       <a href="#ExperentialKnowledge" title="https://purl.org/heals/eo#ExperentialKnowledge">Experential Knowledge</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0006327" title="http://purl.obolibrary.org/obo/OMIT_0006327">Expert Systems</a>
    </li>
    <li>
+      <a href="#http://linkedu.eu/dedalo/explanationPattern.owl#Explanation"
+         title="http://linkedu.eu/dedalo/explanationPattern.owl#Explanation">Explanation</a>
+   </li>
+   <li>
+      <a href="#ExplanationCollection" title="https://purl.org/heals/eo#ExplanationCollection">
+         <span>explanation collection</span>
+      </a>
+   </li>
+   <li>
       <a href="#ExplanationGoal" title="https://purl.org/heals/eo#ExplanationGoal">Explanation Goal</a>
+   </li>
+   <li>
+      <a href="#ExplanationMethod" title="https://purl.org/heals/eo#ExplanationMethod">Explanation Method</a>
    </li>
    <li>
       <a href="#ExplanationModality" title="https://purl.org/heals/eo#ExplanationModality">Explanation Modality</a>
    </li>
    <li>
+      <a href="#ExplanationType" title="https://purl.org/heals/eo#ExplanationType">Explanation Type wrt Model and Interactivity</a>
+   </li>
+   <li>
       <a href="#Fact" title="https://purl.org/heals/eo#Fact">Fact</a>
+   </li>
+   <li>
+      <a href="#FairnessExplanation" title="https://purl.org/heals/eo#FairnessExplanation">Fairness Explanation</a>
+   </li>
+   <li>
+      <a href="#FeatureRelevanceMethods"
+         title="https://purl.org/heals/eo#FeatureRelevanceMethods">Feature Relevance Method</a>
    </li>
    <li>
       <a href="#Foil" title="https://purl.org/heals/eo#Foil">Foil</a>
@@ -80,7 +120,38 @@ This ontology has the following classes and properties.</span>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0028314" title="http://purl.obolibrary.org/obo/OMIT_0028314">Gene Ontology</a>
    </li>
    <li>
+      <a href="#GlobalExplanationOutput"
+         title="https://purl.org/heals/eo#GlobalExplanationOutput">Global Explanation</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C85406" title="http://purl.obolibrary.org/obo/NCIT_C85406">Gross Income</a>
+   </li>
+   <li>
+      <a href="#HighLevelFeatureLearningMethod"
+         title="https://purl.org/heals/eo#HighLevelFeatureLearningMethod">High level feature learning method</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C70811" title="http://purl.obolibrary.org/obo/NCIT_C70811">Household Income</a>
+   </li>
+   <li>
+      <a href="#ImpactExplanation" title="https://purl.org/heals/eo#ImpactExplanation">Impact Explanation</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C41150" title="http://purl.obolibrary.org/obo/NCIT_C41150">Income</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C154890" title="http://purl.obolibrary.org/obo/NCIT_C154890">Income Level</a>
+   </li>
+   <li>
       <a href="#InductiveTask" title="https://purl.org/heals/eo#InductiveTask">Inductive Task</a>
+   </li>
+   <li>
+      <a href="#InteractiveExplanation"
+         title="https://purl.org/heals/eo#InteractiveExplanation">Interactive Explanation</a>
+   </li>
+   <li>
+      <a href="#InterprationAndExplanationTask"
+         title="https://purl.org/heals/eo#InterprationAndExplanationTask">Interpretation and Explanation Task</a>
    </li>
    <li>
       <a href="#knowledge" title="https://purl.org/heals/eo#knowledge">Knowledge</a>
@@ -92,6 +163,20 @@ This ontology has the following classes and properties.</span>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0024712" title="http://purl.obolibrary.org/obo/OMIT_0024712">Knowledge Bases</a>
    </li>
    <li>
+      <a href="#KnowledgeDistillationMethod"
+         title="https://purl.org/heals/eo#KnowledgeDistillationMethod">Knowledge Distillation Method</a>
+   </li>
+   <li>
+      <a href="#KnowledgeExtractionTask"
+         title="https://purl.org/heals/eo#KnowledgeExtractionTask">Knowledge Extraction Task</a>
+   </li>
+   <li>
+      <a href="#LocalExplanation" title="https://purl.org/heals/eo#LocalExplanation">Local Explanation</a>
+   </li>
+   <li>
+      <a href="#LookupTask" title="https://purl.org/heals/eo#LookupTask">Lookup Task</a>
+   </li>
+   <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0001480" title="http://purl.obolibrary.org/obo/OMIT_0001480">Machine Learning</a>
    </li>
    <li>
@@ -99,7 +184,18 @@ This ontology has the following classes and properties.</span>
          title="https://purl.org/heals/eo#Mechanistic_Explanation">Mechanistic Explanation</a>
    </li>
    <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C53334" title="http://purl.obolibrary.org/obo/NCIT_C53334">Median Income</a>
+   </li>
+   <li>
+      <a href="#ModelExplanationOutputs"
+         title="https://purl.org/heals/eo#ModelExplanationOutputs">Model Explanation Output</a>
+   </li>
+   <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0010354" title="http://purl.obolibrary.org/obo/OMIT_0010354">Natural Language Processing</a>
+   </li>
+   <li>
+      <a href="#NeuralNetworkVisualizationMethod"
+         title="https://purl.org/heals/eo#NeuralNetworkVisualizationMethod">Neural Network Visualization Method</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0017046" title="http://purl.obolibrary.org/obo/OMIT_0017046">Neural Networks (Computer)</a>
@@ -108,23 +204,61 @@ This ontology has the following classes and properties.</span>
       <a href="#Numerical_Evidence" title="https://purl.org/heals/eo#Numerical_Evidence">Numerical Evidence</a>
    </li>
    <li>
+      <a href="#ObjectCharacteristic" title="https://purl.org/heals/eo#ObjectCharacteristic">Object Characteristic</a>
+   </li>
+   <li>
       <a href="#object_record" title="https://purl.org/heals/eo#object_record">Object Record</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C120452" title="http://purl.obolibrary.org/obo/NCIT_C120452">Pension</a>
+   </li>
+   <li>
+      <a href="#RationaleProvidingMethods"
+         title="https://purl.org/heals/eo#RationaleProvidingMethods">Providing rationale method</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#Parameter" title="http://purl.org/heals/eo#Parameter">
+         <span>Question Parameter</span>
+      </a>
+   </li>
+   <li>
+      <a href="#RationaleExplanation" title="https://purl.org/heals/eo#RationaleExplanation">Rationale Explanation</a>
    </li>
    <li>
       <a href="#Reasoning_Mode" title="https://purl.org/heals/eo#Reasoning_Mode">Reasoning Mode</a>
    </li>
    <li>
+      <a href="#ResponsibilityExplanation"
+         title="https://purl.org/heals/eo#ResponsibilityExplanation">Responsibility Explanation</a>
+   </li>
+   <li>
+      <a href="#RestrictedNeuralNetworkArchitectures"
+         title="https://purl.org/heals/eo#RestrictedNeuralNetworkArchitectures">Restricted Neural Network Architecture</a>
+   </li>
+   <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0013278" title="http://purl.obolibrary.org/obo/OMIT_0013278">Robotics</a>
    </li>
    <li>
-      <a href="#http://semanticscience.org/resource/SIO_000010" title="http://semanticscience.org/resource/SIO_000010">
-         <span>s i o 000010</span>
+      <a href="#http://semanticscience.org/resource/SIO_000085" title="http://semanticscience.org/resource/SIO_000085">
+         <span>s i o 000085</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://semanticscience.org/resource/SIO_000498" title="http://semanticscience.org/resource/SIO_000498">
+         <span>s i o 000498</span>
       </a>
    </li>
    <li>
       <a href="#http://semanticscience.org/resource/SIO_001194" title="http://semanticscience.org/resource/SIO_001194">
          <span>s i o 001194</span>
       </a>
+   </li>
+   <li>
+      <a href="#SafetyAndPerformanceExplanation"
+         title="https://purl.org/heals/eo#SafetyAndPerformanceExplanation">Safety and Performance Explanation</a>
+   </li>
+   <li>
+      <a href="#SaliencyMethods" title="https://purl.org/heals/eo#SaliencyMethods">Saliency Method</a>
    </li>
    <li>
       <a href="#scientificExplanation" title="https://purl.org/heals/eo#scientificExplanation">Scientific Explanation</a>
@@ -140,6 +274,28 @@ This ontology has the following classes and properties.</span>
          title="https://purl.org/heals/eo#SimulationBasedExplanation">Simulation Based Explanation</a>
    </li>
    <li>
+      <a href="#http://www.ontologydesignpatterns.org/cp/owl/situation.owl#Situation"
+         title="http://www.ontologydesignpatterns.org/cp/owl/situation.owl#Situation">Situation</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C20188" title="http://purl.obolibrary.org/obo/NCIT_C20188">Social Circumstances</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C120451" title="http://purl.obolibrary.org/obo/NCIT_C120451">Social Security Retirement Benefit</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C17468" title="http://purl.obolibrary.org/obo/NCIT_C17468">Socioeconomic Factors</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/NCIT_C53333" title="http://purl.obolibrary.org/obo/NCIT_C53333">Socioeconomic Indicator</a>
+   </li>
+   <li>
+      <a href="#StatementOfBias" title="https://purl.org/heals/eo#StatementOfBias">statement of bias</a>
+   </li>
+   <li>
+      <a href="#StaticExplanation" title="https://purl.org/heals/eo#StaticExplanation">Static Explanation</a>
+   </li>
+   <li>
       <a href="#StatisticalExplanation"
          title="https://purl.org/heals/eo#StatisticalExplanation">Statistical Explanation</a>
    </li>
@@ -150,13 +306,41 @@ This ontology has the following classes and properties.</span>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0027764" title="http://purl.obolibrary.org/obo/OMIT_0027764">Support Vector Machine</a>
    </li>
    <li>
+      <a href="#http://purl.org/heals/eo#System" title="http://purl.org/heals/eo#System">System</a>
+   </li>
+   <li>
+      <a href="#SystemCharacteristic" title="https://purl.org/heals/eo#SystemCharacteristic">System Characteristic</a>
+   </li>
+   <li>
+      <a href="#SystemDesigner" title="https://purl.org/heals/eo#SystemDesigner">System Designer</a>
+   </li>
+   <li>
+      <a href="#SystemDeveloper" title="https://purl.org/heals/eo#SystemDeveloper">System Developer</a>
+   </li>
+   <li>
       <a href="#SystemRecommendation" title="https://purl.org/heals/eo#SystemRecommendation">System Recommendation</a>
    </li>
    <li>
       <a href="#SystemTrace" title="https://purl.org/heals/eo#SystemTrace">System Trace</a>
    </li>
    <li>
+      <a href="#Technological_Context" title="https://purl.org/heals/eo#Technological_Context">Technological Context</a>
+   </li>
+   <li>
       <a href="#TraceBasedExplanation" title="https://purl.org/heals/eo#TraceBasedExplanation">Trace Based Explanation</a>
+   </li>
+   <li>
+      <a href="#GlobalExplanationType" title="https://purl.org/heals/eo#GlobalExplanationType">Type - Global Explanation</a>
+   </li>
+   <li>
+      <a href="#InteractiveExplanationType"
+         title="https://purl.org/heals/eo#InteractiveExplanationType">Type - Interactive Explanation</a>
+   </li>
+   <li>
+      <a href="#LocalExplanationType" title="https://purl.org/heals/eo#LocalExplanationType">Type - Local Explanation</a>
+   </li>
+   <li>
+      <a href="#StaticExplanationType" title="https://purl.org/heals/eo#StaticExplanationType">Type - Static Explanation</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0001486" title="http://purl.obolibrary.org/obo/OMIT_0001486">Unsupervised Machine Learning</a>
@@ -165,9 +349,12 @@ This ontology has the following classes and properties.</span>
       <a href="#user" title="https://purl.org/heals/eo#user">User</a>
    </li>
    <li>
+      <a href="#UserCharacteristic" title="https://purl.org/heals/eo#UserCharacteristic">User Characteristic</a>
+   </li>
+   <li>
       <a href="#User_Context" title="https://purl.org/heals/eo#User_Context">User Context</a>
    </li>
-</ul><h4>Object Properties</h4><ul class="hlist">
+</ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
       <a href="#addresses" title="https://purl.org/heals/eo#addresses">addresses</a>
    </li>
@@ -175,21 +362,79 @@ This ontology has the following classes and properties.</span>
       <a href="#asks" title="https://purl.org/heals/eo#asks">asks</a>
    </li>
    <li>
-      <a href="#hasPreferenceFor" title="https://purl.org/heals/eo#hasPreferenceFor">has preference for</a>
+      <a href="#hasAvailability" title="https://purl.org/heals/eo#hasAvailability">has availability</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#hasCharacteristic" title="http://purl.org/heals/eo#hasCharacteristic">has characteristic</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#hasExplanationType" title="http://purl.org/heals/eo#hasExplanationType">
+         <span>has explanation type</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#hasParameter" title="http://purl.org/heals/eo#hasParameter">has parameter</a>
    </li>
    <li>
       <a href="#hasPresentation" title="https://purl.org/heals/eo#hasPresentation">has presentation</a>
    </li>
    <li>
+      <a href="#http://purl.org/heals/eo#hasPrimaryParameter" title="http://purl.org/heals/eo#hasPrimaryParameter">has primary parameter</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#hasSecondaryParameter" title="http://purl.org/heals/eo#hasSecondaryParameter">has secondary parameter</a>
+   </li>
+   <li>
+      <a href="#http://www.ontologydesignpatterns.org/cp/owl/situation.owl#hasSetting"
+         title="http://www.ontologydesignpatterns.org/cp/owl/situation.owl#hasSetting">has setting</a>
+   </li>
+   <li>
       <a href="#implements" title="https://purl.org/heals/eo#implements">implements</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#isAvailibleIn" title="http://purl.org/heals/eo#isAvailibleIn">is available in</a>
+   </li>
+   <li>
+      <a href="#http://linkedu.eu/dedalo/explanationPattern.owl#isBasedOn"
+         title="http://linkedu.eu/dedalo/explanationPattern.owl#isBasedOn">is based on</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#isCharacteristicOf" title="http://purl.org/heals/eo#isCharacteristicOf">is characteristic of</a>
    </li>
    <li>
       <a href="#consumes" title="https://purl.org/heals/eo#consumes">is consumer of</a>
    </li>
    <li>
+      <a href="#http://purl.org/heals/eo#isOpposedBy" title="http://purl.org/heals/eo#isOpposedBy">is opposed by</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#isSupportedBy" title="http://purl.org/heals/eo#isSupportedBy">is supported by</a>
+   </li>
+   <li>
+      <a href="#isUsedBy" title="https://purl.org/heals/eo#isUsedBy">is used by</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#opposes" title="http://purl.org/heals/eo#opposes">opposes</a>
+   </li>
+   <li>
       <a href="#possess" title="https://purl.org/heals/eo#possess">possess</a>
    </li>
-</ul><h4>Named Individuals</h4><ul class="hlist">
+   <li>
+      <a href="#http://purl.org/heals/eo#recommendedBy" title="http://purl.org/heals/eo#recommendedBy">recommended by</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#recommends" title="http://purl.org/heals/eo#recommends">recommends</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#supports" title="http://purl.org/heals/eo#supports">supports</a>
+   </li>
+</ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
+   <li>
+      <a href="#http://purl.org/heals/eo#isInternal" title="http://purl.org/heals/eo#isInternal">
+         <span>is internal</span>
+      </a>
+   </li>
+</ul><h4>Named Individuals</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
       <a href="#ContrastiveQuestion" title="https://purl.org/heals/eo#ContrastiveQuestion">"Why Drug A over Drug B?"</a>
    </li>
@@ -220,11 +465,16 @@ This ontology has the following classes and properties.</span>
          title="https://purl.org/heals/eo#ContrastiveExpInstance">Guidelines recommend Drug B for this patient</a>
    </li>
    <li>
-      <a href="#HyperglycemiaPatient" title="https://purl.org/heals/eo#HyperglycemiaPatient">Patient A with a condition</a>
+      <a href="#HyperglycemiaPatient" title="https://purl.org/heals/eo#HyperglycemiaPatient">Patient 100</a>
    </li>
    <li>
       <a href="#ContextualKnowledgePatientA"
          title="https://purl.org/heals/eo#ContextualKnowledgePatientA">Patient has hyperglycemia</a>
+   </li>
+   <li>
+      <a href="#http://purl.org/heals/eo#Parameter" title="http://purl.org/heals/eo#Parameter">
+         <span>Question Parameter</span>
+      </a>
    </li>
    <li>
       <a href="#QuestionFromUserStudy2"
