--- a/WidocoDocumentation/index-en.html
+++ b/WidocoDocumentation/index-en.html
@@ -80,19 +80,7 @@ function loadTOC(){
 <dt>Imported Ontologies:</dt>
 <dd><a href="http://semanticscience.org/ontology/sio.owl">sio.owl</a></dd><dd><a href="http://www.w3.org/ns/prov-o#">prov-o#</a></dd>
 
-<dt>Download serialization:</dt><dd><span><a href="ontology.jsonld" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.rdf" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License:</dt><dd><a href="http://www.apache.org/licenses/LICENSE_2.0" target="_blank"><img src="https://img.shields.io/badge/License-Copyright%202022%20IBM%20Research%20and%20Rensselaer%20Polytechnic%20Institute
-
-			Licensed%20under%20the%20Apache%20License,%20Version%202.0%20(the%20"License");
-	you%20may%20not%20use%20this%20file%20except%20in%20compliance%20with%20the%20License.
-	You%20may%20obtain%20a%20copy%20of%20the%20License%20at
-
-		http://www.apache.org/licenses/LICENSE_2.0
-
-	Unless%20required%20by%20applicable%20law%20or%20agreed%20to%20in%20writing,%20software
-	distributed%20under%20the%20License%20is%20distributed%20on%20an%20"AS%20IS"%20BASIS,
-	WITHOUT%20WARRANTIES%20OR%20CONDITIONS%20OF%20ANY%20KIND,%20either%20express%20or%20implied.
-	See%20the%20License%20for%20the%20specific%20language%20governing%20permissions%20and
-	limitations%20under%20the%20License.-blue.svg" alt="http://insertlicenseURIhere.org" /></a>
+<dt>Download serialization:</dt><dd><span><a href="ontology.jsonld" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.rdf" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License:</dt><dd><a href="http://www.apache.org/licenses/LICENSE_2.0" target="_blank">Apache 2.0</a>
 </dd><dt>Visualization:</dt><dd><a href="webvowl/index.html#" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <!-- <dt>Evaluation:</dt><dd><a href="OOPSEvaluation/oopsEval.html#" target="_blank"><img src="https://img.shields.io/badge/Evaluate_with-OOPS! (OntOlogy Pitfall Scanner!)-blue.svg" alt="Evaluate with OOPS!" /></a></dd> --><dt>Cite as:</dt>
 <dd>Shruthi Chari. Explanation Ontology. Retrieved from: https://purl.org/heals/eo/2.0.0</dd>
